@@ -1,6 +1,7 @@
 *Version 1.0.3*
 * CAUTION: Removed persist path to allow full upgrade of module's web folder. Ensure any custom work is moved to the overrides folder in the core.
 * To add new files to this module place them in the core/overrides/web/modules/dashboards/web/ folder with an identical structure
+* Added ability to override files using the mango-javascript URL mapping prefix
 
 *Version 1.0.2
 * Various bugfixes and enhancements
